# blacker-cglib

./: .gitignore  CMakeLists.txt  README.md
bcg/transforms/: point.hpp  translation.hpp  vector.hpp
bcg/transforms/b_vector/: b_vector.hpp
bcg/transforms/matrix/: matrix.hpp
test/: b_vector_test.cpp  bv_m_conversion_test.cpp  matrix_test.cpp  translation_test.cpp
